Improve button styles; Fix gap on pitch page

--- a/assets/stylesheets/core/_global.scss
+++ b/assets/stylesheets/core/_global.scss
@@ -39,3 +39,8 @@ html
 		color: #0000ff;
 	}
 }
+
+.btn
+{
+	padding: 10px;
+}
