--- a/assets/stylesheets/module/_header.scss
+++ b/assets/stylesheets/module/_header.scss
@@ -8,7 +8,7 @@ header
 	.btn 
 	{
 		float: right;
-		margin: 25px 0;
+		margin: 22px 0;
 		font-weight: bold;
 		font-family: $primary-sans;
 	}
