--- a/assets/stylesheets/page/_home.scss
+++ b/assets/stylesheets/page/_home.scss
@@ -16,7 +16,6 @@
 
 		.btn 
 		{
-			padding: 12px;
 			margin: 5px 0 0;
 		}
 	}
