--- a/assets/stylesheets/page/_pitch.scss
+++ b/assets/stylesheets/page/_pitch.scss
@@ -1,7 +1,12 @@
 .page#pitch
 {
 	background-color: $white;
-	
+
+	.logo {
+		margin-top: 0;
+		padding-top: 20px;
+	}
+
 	p
 	{
 		font-size: 14px;
